Fixed footer from being too tall

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -444,7 +444,10 @@
     
   @media (max-width: 496px) {
   
-   
+   .site-footer
+   {
+    height: unset;
+   }
     
     .site-footer .container { 
       max-width: 100%;
